--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,32 +6,32 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
+
+      - name: Update files
+        run: |
+          python scripts/links.py
+
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: "*.tex"
-          glob_root_file: true
+          root_file: "main.tex"
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
-
-      - name: Update Readme
-        run: |
-          python scripts/links.py
 
       - name: Get current date
         id: date
         run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
 
-      # - name: Commit files
-      #   run: |
-      #     git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      #     git config --local user.name "github-actions[bot]"
-      #     git status
-      #     git add .
-      #     git commit -m "update readme" -a
+      - name: Commit files
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git status
+          git add .
+          git commit -m "update readme" -a
 
-      # - name: Push changes
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     branch: main
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
