--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
             '--regex=naive=\bna(i|\\"i)ve',
           ]
       - id: csquotes
-      - id: ensure-labels-for-sections
+      # - id: ensure-labels-for-sections
       - id: no-space-in-cite
       - id: tilde-cite
       - id: unique-labels
