--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,8 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git status
           git add .
-          git commit -m "update readme" -a
+          latexindent -w main.tex
+          git commit -m "update example and readme" -a
 
       - name: Push changes
         uses: ad-m/github-push-action@master
