--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: "main.tex"
+          root_file: "*.tex"
+          glob_root_file: true
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
 
