style: remove unnecessary library import

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,11 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: "*.tex"
+          root_file: "main.tex"
           glob_root_file: true
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           args: "-output-directory=./gallery"
-
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
 
       - name: Commit files
         run: |
