--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,13 @@ jobs:
           python scripts/links.py
 
       - name: Compile LaTeX document
-        uses: xu-cheng/latex-action@v2
+        uses: xu-cheng/latex-action@master
         with:
           root_file: |
             "main.tex"
             "source/*tex"
-          glob_root_file: true
+          working_directory: _path_
+          work_in_root_file_dir: true
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           args: "-output-directory=./gallery"
