--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,11 @@ jobs:
         uses: xu-cheng/latex-action@master
         with:
           root_file: |
+            "main.tex"
             "source/*tex"
+          working_directory: _path_
+          work_in_root_file_dir: true
+          glob_root_file: true
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           args: "-output-directory=./gallery"
